Report Server + Tailwind

--- a/package.json
+++ b/package.json
@@ -14,10 +14,24 @@
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
+    "@angular/localize": "^19.2.0",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@progress/kendo-angular-common": "17.2.0",
+    "@progress/kendo-angular-icons": "17.2.0",
+    "@progress/kendo-angular-l10n": "17.2.0",
+    "@progress/kendo-angular-map": "^17.2.0",
+    "@progress/kendo-angular-popup": "17.2.0",
+    "@progress/kendo-drawing": "^1.21.0",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-theme-default": "^10.6.0",
+    "@progress/telerik-angular-native-report-viewer": "^25.25.313",
+    "@progress/telerik-reporting-schematics": "^25.25.313",
+    "@tailwindcss/postcss": "^4.1.5",
+    "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -25,6 +39,7 @@
     "@angular-devkit/build-angular": "^19.2.10",
     "@angular/cli": "^19.2.10",
     "@angular/compiler-cli": "^19.2.0",
+    "@angular/localize": "^19.2.9",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
